2008-08-11  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* t/GtkClipboard.t
	* xs/GtkClipboard.xs: Wrap gtk_clipboard_request_uris,
	gtk_clipboard_wait_for_uris, and
	gtk_clipboard_wait_is_uris_available.  Also fix the rich text
	tests.

	* t/GtkCalendar.t
	* xs/GtkCalendar.xs: Wrap gtk_calendar_set_detail_func.

2008-08-08  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* xs/GdkCairo.xs
	* xs/GdkProperty.xs
	* xs/GtkBuilder.xs
	* xs/GtkSelection.xs: Fix some POD glitches.

2008-08-07  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* t/GtkBuilder.t: Merge the UI definitions and, more importantly,
	make it work correctly with newer gtk+.

	* t/GtkBuilder.t
	* xs/GtkBuilder.xs: Wrap gtk_builder_add_objects_from_file and
	gtk_builder_add_objects_from_string.

2008-08-05  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* t/GtkAccelGroup.t
	* xs/GtkAccelGroup.xs: Wrap gtk_accel_group_get_is_locked and
	gtk_accel_group_get_modifier_mask.

2008-08-03  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* xs/GtkTreeModel.xs (gtk2perl_tree_model_rows_reordered_marshal)
	* t/GtkTreeModelIface.t: Fix marshaling of the rows-reordered
	signal for custom Perl tree models.  Patch by Kevin Ryde.

	* xs/GtkAboutDialog.xs: Don't define macros inside a MODULE
	section.  Older xsubpp can't handle that.

	* xs/GtkMenu.xs (gtk2perl_menu_position_func): The push_in return
	value is a boolean, not an integer.  Marshal it accordingly.

	* xs/GtkDialog.xs: Add documentation about closing dialogs, and
	mention that class closures for the response signal receive
	unconverted response ids.  Patch by Kevin Ryde.

	* xs/GtkWindow.xs: Add a couple of words about the delete-event
	signal and its relation to window destruction and hidden windows.
	Patch by Kevin Ryde.

	* xs/GtkTreeModel.xs: Document that class closures in Perl
	subclasses for the rows-reordered signal receive an incorrect
	reorder array parameter, unlike normal signal handlers.  Patch by
	Kevin Ryde.

2008-07-13  Torsten Schoenfeld  <kaffeetisch@gmx.de>
