@@ -3,7 +3,7 @@
 
 # $Header$
 
-use Gtk2::TestHelper tests => 28;
+use Gtk2::TestHelper tests => 30;
 
 # we'll create some containers (windows and boxes are containers) and
 # mess around with some of the methods to make sure they do things.
@@ -20,6 +20,15 @@ ok (1, 'added a widget to the window');
 
 $window->set_focus_child($vbox);
 ok(1);
+
+SKIP: {
+	skip 'new 2.14 stuff', 2
+		unless Gtk2->CHECK_VERSION(2, 13, 6); # FIXME: 2.14
+
+	is ($window->get_focus_child, $vbox);
+	$window->set_focus_child (undef);
+	is ($window->get_focus_child, undef);
+}
 
 my $adjustment = Gtk2::Adjustment->new(0, 0, 100, 5, 10, 20);
 
