@@ -188,7 +188,13 @@ gtk_container_unset_focus_chain (container)
 void
 gtk_container_set_focus_child (container, child)
 	GtkContainer *container
-	GtkWidget *child
+	GtkWidget_ornull *child
+
+#if GTK_CHECK_VERSION (2, 13, 6) /* FIXME: 2.14*/
+
+GtkWidget_ornull * gtk_container_get_focus_child (GtkContainer *container);
+
+#endif /* 2.14 */
 
 GtkAdjustment_ornull *
 gtk_container_get_focus_hadjustment (container)
